--- a/requirements/aitnd-windows.yml
+++ b/requirements/aitnd-windows.yml
@@ -6,15 +6,18 @@ dependencies:
     - ipykernel
     - jupyter
     - matplotlib # needed for cvxpy
+#    - networkx=1.9.1 # native was 2.2 (py36_1) and 1.11 (pip)
     - nb_conda
     - numpy
     - pandas=0.22
     - pyhamcrest
     - pyparsing
     - python-dateutil
+    - python-graphviz
     - pytz
     - requests
     - scipy
+    - scikit-image # mkl downgrade 2019.1-144 --> 2018.0.3-1
     - scikit-learn
     - six
     - tqdm
